@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.78 2003/03/07 09:15:46 stelian Exp $
+$Id: THANKS,v 1.79 2003/04/09 10:42:57 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -64,6 +64,7 @@ Henry Katz		hkatz@hkatz.dialup.access.net
 Dragan Krnic		dkrnic@lycos.com
 Klaus Kudielka		kkudielk@cacofonix.nt.tuwien.ac.at
 Thorsten Kukuk		kukuk@suse.de
+Ken Lalonde		ken@globalremit.com
 Florian La Roche	florian@jurix.jura.uni-sb.de
 Kari Lempiainen		kari@funky.pp.fi
 Ambrose Li		acli@mingpaoxpress.com
@@ -71,6 +72,7 @@ Georg Lippold		g_lippold@sourceforge.net
 Patrick J. LoPresti	patl@cag.lcs.mit.edu
 Greg Lutz		greglutz@ix.netcom.com
 Eric Maisonobe		virnet@nat.fr
+Kai Makisara		Kai.Makisara@kolumbus.fi
 Andy Mentges		amentges@jumpline.com
 David Miller		davem@caip.rutgers.edu
 Elliott Mitchell	ehem@m5p.com
